crates/sith_python_parser/src/snapshots/python_parser__string__tests__parse_empty_fstring.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..3,
            value: FString(
                FStringExpr {
                    range: 0..3,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..3,
                                    elements: [],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
