crates/sith_python_parser/src/snapshots/python_parser__string__tests__parse_fstring.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..18,
            value: FString(
                FStringExpr {
                    range: 0..18,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..18,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..5,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..4,
                                                        id: Name("a"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..10,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 7..8,
                                                        id: Name("b"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Literal(
                                            FStringLiteralElement {
                                                range: 10..17,
                                                value: "{foo}",
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
