crates/sith_python_parser/src/snapshots/python_parser__string__tests__parse_fstring_nested_spec.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..15,
            value: FString(
                FStringExpr {
                    range: 0..15,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..15,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..14,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..13,
                                                        elements: [
                                                            Expression(
                                                                FStringExpressionElement {
                                                                    range: 7..13,
                                                                    expression: Name(
                                                                        NameExpr {
                                                                            range: 8..12,
                                                                            id: Name("spec"),
                                                                            ctx: Load,
                                                                        },
                                                                    ),
                                                                    debug_text: None,
                                                                    conversion: None,
                                                                    format_spec: None,
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
